# rust-postgres

./: Cargo.toml
.github/workflows/: ci.yml
codegen/: Cargo.toml
codegen/src/: main.rs  type_gen.rs
postgres/: Cargo.toml
postgres-derive/: Cargo.toml
postgres-derive-test/: Cargo.toml
postgres-derive-test/src/: composites.rs  from_row.rs  lib.rs
postgres-derive/src/: case.rs  composites.rs  from_row.rs  fromsql.rs  lib.rs  overrides.rs  tosql.rs
postgres-native-tls/: Cargo.toml
postgres-native-tls/src/: lib.rs
postgres-openssl/: Cargo.toml
postgres-openssl/src/: lib.rs
postgres-protocol/: Cargo.toml
postgres-protocol/src/authentication/: sasl.rs
postgres-protocol/src/message/: frontend.rs
postgres-protocol/src/types/: mod.rs  test.rs
postgres-range/: Cargo.toml
postgres-range/src/: impls.rs  lib.rs
postgres-types/: CHANGELOG.md  Cargo.toml
postgres-types/src/: chrono_04.rs  chrono_tz_010.rs  chrono_tz_09.rs  lib.rs  serde_json_1.rs  time_02.rs  time_03.rs  type_gen.rs
postgres/src/: client.rs  config.rs  connection.rs  generic_client.rs  lazy_pin.rs  lib.rs  transaction.rs
tokio-postgres/: CHANGELOG.md  Cargo.toml
tokio-postgres-derive/: Cargo.toml
tokio-postgres-derive-test/: Cargo.toml
tokio-postgres-derive-test/src/: from_row.rs
tokio-postgres-derive/src/: from_row.rs  lib.rs
tokio-postgres/src/: client.rs  config.rs  connect_raw.rs  connection.rs  copy_in.rs  copy_out.rs  from_row.rs  generic_client.rs  lib.rs  portal.rs  prepare.rs  query.rs  row.rs  simple_query.rs  statement.rs  to_statement.rs  transaction.rs
(+7 files in other folders)
