[workspace]
members = [
    "codegen",
    "postgres",
    "postgres-derive",
    "postgres-derive-test",
    "postgres-native-tls",
    "postgres-openssl",
    "postgres-protocol",
    "postgres-types",
    "tokio-postgres",
    "tokio-postgres-derive",
    "tokio-postgres-derive-test"
]
resolver = "2"

[workspace.package]
edition = "2018"

[profile.release]
debug = 2
